Finalicé 1scraper_principal. Lo renombré scraper_filters. Ya se mete en la página y selecciona todos los filtros que necesitamos para hacer el web scrapping.

--- a/src/data/scraper_filters.ipynb
+++ b/src/data/scraper_filters.ipynb
@@ -2,10 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ActionChains Documentation: \n",
+    "# https://www.selenium.dev/selenium/docs/api/py/webdriver/selenium.webdriver.common.action_chains.html#selenium.webdriver.common.action_chains.ActionChains.release\n",
+    "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -49,14 +52,33 @@
     "\n",
     "# Use ActionChains to drag the first slider\n",
     "actions = ActionChains(driver)\n",
-    "actions.click_and_hold(slider_1).move_by_offset(-10, 0).release().perform()  # Move to the leftmost position (0)\n",
+    "actions.click_and_hold(slider_1).move_by_offset(-10, 0).release().perform()\n",
     "\n",
     "# Find the second slider handle (right)\n",
     "slider_2 = driver.find_element(By.XPATH, \"//div[@class='rc-slider-handle rc-slider-handle-2']\")\n",
     "\n",
     "# Use ActionChains to drag the second slider\n",
     "actions = ActionChains(driver)\n",
-    "actions.click_and_hold(slider_2).move_by_offset(150, 0).release().perform()  # Move to the rightmost position (10000)\n",
+    "actions.click_and_hold(slider_2).move_by_offset(150, 0).release().perform()\n",
+    "\n",
+    "# Step 5: Select Any Rating option\n",
+    "any_rating_label = wait.until(EC.element_to_be_clickable((By.XPATH, \"//label[.//input[@name='rating' and @value='1']]\")))\n",
+    "driver.execute_script(\"arguments[0].click();\", any_rating_label)\n",
+    "\n",
+    "\n",
+    "# Step 6: Select Countries\n",
+    "countries_dropdown = driver.find_element(By.XPATH, \"//legend[@data-testid='filter-toggle-button'][.//h5[.='Countries']]\")\n",
+    "driver.execute_script(\"arguments[0].click();\", countries_dropdown)\n",
+    "time.sleep(2)\n",
+    "countries_ar = wait.until(EC.element_to_be_clickable((By.XPATH, \"//span[contains(@class, 'MuiButtonBase-root')]/parent::label[@data-testid='countries_ar']\")))\n",
+    "countries_cl = wait.until(EC.element_to_be_clickable((By.XPATH, \"//span[contains(@class, 'MuiButtonBase-root')]/parent::label[@data-testid='countries_cl']\")))\n",
+    "driver.execute_script(\"arguments[0].click(); arguments[1].click();\", countries_ar, countries_cl)\n",
+    "countries_search = wait.until(EC.element_to_be_clickable((By.XPATH, \"//input[@id='filter-checkboxes-search' and @placeholder='Search countries']\")))\n",
+    "countries_search.click()\n",
+    "countries_search.send_keys(\"Brazil\")\n",
+    "time.sleep(1)\n",
+    "countries_br = wait.until(EC.element_to_be_clickable((By.XPATH, \"//span[contains(@class, 'MuiButtonBase-root')]/parent::label[@data-testid='countries_br']\")))\n",
+    "driver.execute_script(\"arguments[0].click()\", countries_br)\n",
     "\n",
     "# Wait and see the result\n",
     "time.sleep(5)\n",
@@ -67,7 +89,7 @@
     "# Pass it to BeautifulSoup\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "driver.quit()"
+    "#driver.quit()"
    ]
   }
  ],
