Obtención de links de vinos de 1 página

--- a/src/data/scraper_filters.ipynb
+++ b/src/data/scraper_filters.ipynb
@@ -2,12 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.vivino.com/US/en/luigi-bosca-paraiso/w/11003299?year=2020&price_id=38548588\n",
+      "https://www.vivino.com/US/en/chadwick-red/w/2774263?year=2011&price_id=35076189\n",
+      "https://www.vivino.com/US/en/catena-zapata-estiba-reservada/w/1186732?year=2015&price_id=36655721\n",
+      "https://www.vivino.com/US/en/montes-taita/w/1807024?year=2007&price_id=27980186\n",
+      "https://www.vivino.com/US/en/catena-zapata-estiba-reservada/w/1186732?year=2017&price_id=35604406\n",
+      "https://www.vivino.com/US/en/monteviejo-la-violeta/w/1556378?year=2013&price_id=30269631\n",
+      "https://www.vivino.com/US/en/vina-cobos-cobos-volturno/w/1505859?year=2018&price_id=30508346\n",
+      "https://www.vivino.com/US/en/monteviejo-la-violeta/w/1556378?year=2014&price_id=38149864\n",
+      "https://www.vivino.com/US/en/vina-cobos-cobos-vina-cobos-malbec/w/10113406?year=2019&price_id=33408877\n",
+      "https://www.vivino.com/US/en/catena-zapata-adrianna-vineyard-mundus-bacillus-terrae-malbec-gualtallary/w/5107190?year=2017&price_id=25247262\n",
+      "https://www.vivino.com/US/en/vina-cobos-cobos-volturno/w/1505859?year=2019&price_id=33243233\n",
+      "https://www.vivino.com/US/en/vina-cobos-cobos-volturno/w/1505859?year=2020&price_id=36296590\n",
+      "https://www.vivino.com/US/en/catena-zapata-nicolas-catena-zapata/w/1868?year=2017&price_id=31538699\n",
+      "https://www.vivino.com/US/en/catena-zapata-malbec-argentino/w/1869?year=2020&price_id=37871895\n",
+      "https://www.vivino.com/US/en/almaviva-almaviva/w/4086?year=2015&price_id=17684707\n",
+      "https://www.vivino.com/US/en/catena-zapata-malbec-argentino/w/1869?year=2021&price_id=38399411\n",
+      "https://www.vivino.com/US/en/el-enemigo-gran-enemigo-single-vineyard-chacayes-cabernet-franc-tunuyan/w/5441681?year=2016&price_id=37450913\n",
+      "https://www.vivino.com/US/en/almaviva-almaviva/w/4086?year=2017&price_id=25248770\n",
+      "https://www.vivino.com/US/en/vina-vik-winery-vik/w/1524704?year=2013&price_id=22847704\n",
+      "https://www.vivino.com/US/en/almaviva-almaviva/w/4086?year=2018&price_id=31902918\n",
+      "https://www.vivino.com/US/en/clos-apalta-clos-apalta/w/13759?year=2017&price_id=28088714\n",
+      "https://www.vivino.com/US/en/susana-balbo-nosotros-single-vineyard-nomade-agrelo/w/1724358?year=2018&price_id=27689560\n",
+      "https://www.vivino.com/US/en/chadwick-red/w/2774263?year=2009&price_id=35076185\n",
+      "https://www.vivino.com/US/en/catena-zapata-adrianna-vineyard-mundus-bacillus-terrae-malbec-gualtallary/w/5107190?year=2013&price_id=31545335\n",
+      "https://www.vivino.com/US/en/chadwick-red/w/2774263?year=2015&price_id=33499797\n"
+     ]
+    }
+   ],
    "source": [
     "# ActionChains Documentation: \n",
     "# https://www.selenium.dev/selenium/docs/api/py/webdriver/selenium.webdriver.common.action_chains.html#selenium.webdriver.common.action_chains.ActionChains.release\n",
+    "\n",
+    "# Beautiful Soup Docs: https://www.crummy.com/software/BeautifulSoup/bs4/doc/\n",
     "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
@@ -89,6 +123,12 @@
     "# Pass it to BeautifulSoup\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
+    "links = [a[\"href\"] for a in soup.find_all('a', {\"data-testid\": \"vintagePageLink\"})]\n",
+    "\n",
+    "full_links = [\"https://www.vivino.com\" + link for link in links]\n",
+    "\n",
+    "for link in full_links:\n",
+    "    print(link)\n",
     "#driver.quit()"
    ]
   }
