Creé el script para obtención de vinos de todas las páginas y comencé la extracción de datos de cada página en particular

--- a/src/data/scraper_filters.ipynb
+++ b/src/data/scraper_filters.ipynb
@@ -4,39 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.vivino.com/US/en/luigi-bosca-paraiso/w/11003299?year=2020&price_id=38548588\n",
-      "https://www.vivino.com/US/en/chadwick-red/w/2774263?year=2011&price_id=35076189\n",
-      "https://www.vivino.com/US/en/catena-zapata-estiba-reservada/w/1186732?year=2015&price_id=36655721\n",
-      "https://www.vivino.com/US/en/montes-taita/w/1807024?year=2007&price_id=27980186\n",
-      "https://www.vivino.com/US/en/catena-zapata-estiba-reservada/w/1186732?year=2017&price_id=35604406\n",
-      "https://www.vivino.com/US/en/monteviejo-la-violeta/w/1556378?year=2013&price_id=30269631\n",
-      "https://www.vivino.com/US/en/vina-cobos-cobos-volturno/w/1505859?year=2018&price_id=30508346\n",
-      "https://www.vivino.com/US/en/monteviejo-la-violeta/w/1556378?year=2014&price_id=38149864\n",
-      "https://www.vivino.com/US/en/vina-cobos-cobos-vina-cobos-malbec/w/10113406?year=2019&price_id=33408877\n",
-      "https://www.vivino.com/US/en/catena-zapata-adrianna-vineyard-mundus-bacillus-terrae-malbec-gualtallary/w/5107190?year=2017&price_id=25247262\n",
-      "https://www.vivino.com/US/en/vina-cobos-cobos-volturno/w/1505859?year=2019&price_id=33243233\n",
-      "https://www.vivino.com/US/en/vina-cobos-cobos-volturno/w/1505859?year=2020&price_id=36296590\n",
-      "https://www.vivino.com/US/en/catena-zapata-nicolas-catena-zapata/w/1868?year=2017&price_id=31538699\n",
-      "https://www.vivino.com/US/en/catena-zapata-malbec-argentino/w/1869?year=2020&price_id=37871895\n",
-      "https://www.vivino.com/US/en/almaviva-almaviva/w/4086?year=2015&price_id=17684707\n",
-      "https://www.vivino.com/US/en/catena-zapata-malbec-argentino/w/1869?year=2021&price_id=38399411\n",
-      "https://www.vivino.com/US/en/el-enemigo-gran-enemigo-single-vineyard-chacayes-cabernet-franc-tunuyan/w/5441681?year=2016&price_id=37450913\n",
-      "https://www.vivino.com/US/en/almaviva-almaviva/w/4086?year=2017&price_id=25248770\n",
-      "https://www.vivino.com/US/en/vina-vik-winery-vik/w/1524704?year=2013&price_id=22847704\n",
-      "https://www.vivino.com/US/en/almaviva-almaviva/w/4086?year=2018&price_id=31902918\n",
-      "https://www.vivino.com/US/en/clos-apalta-clos-apalta/w/13759?year=2017&price_id=28088714\n",
-      "https://www.vivino.com/US/en/susana-balbo-nosotros-single-vineyard-nomade-agrelo/w/1724358?year=2018&price_id=27689560\n",
-      "https://www.vivino.com/US/en/chadwick-red/w/2774263?year=2009&price_id=35076185\n",
-      "https://www.vivino.com/US/en/catena-zapata-adrianna-vineyard-mundus-bacillus-terrae-malbec-gualtallary/w/5107190?year=2013&price_id=31545335\n",
-      "https://www.vivino.com/US/en/chadwick-red/w/2774263?year=2015&price_id=33499797\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ActionChains Documentation: \n",
     "# https://www.selenium.dev/selenium/docs/api/py/webdriver/selenium.webdriver.common.action_chains.html#selenium.webdriver.common.action_chains.ActionChains.release\n",
@@ -53,6 +21,7 @@
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from bs4 import BeautifulSoup\n",
     "import time\n",
+    "import pandas as pd\n",
     "\n",
     "# Set up Selenium\n",
     "options = webdriver.ChromeOptions()\n",
@@ -106,8 +75,9 @@
     "driver.execute_script(\"arguments[0].click();\", countries_dropdown)\n",
     "time.sleep(2)\n",
     "countries_ar = wait.until(EC.element_to_be_clickable((By.XPATH, \"//span[contains(@class, 'MuiButtonBase-root')]/parent::label[@data-testid='countries_ar']\")))\n",
-    "countries_cl = wait.until(EC.element_to_be_clickable((By.XPATH, \"//span[contains(@class, 'MuiButtonBase-root')]/parent::label[@data-testid='countries_cl']\")))\n",
-    "driver.execute_script(\"arguments[0].click(); arguments[1].click();\", countries_ar, countries_cl)\n",
+    "#countries_cl = wait.until(EC.element_to_be_clickable((By.XPATH, \"//span[contains(@class, 'MuiButtonBase-root')]/parent::label[@data-testid='countries_cl']\")))\n",
+    "#driver.execute_script(\"arguments[0].click(); arguments[1].click();\", countries_ar countries_cl)\n",
+    "driver.execute_script(\"arguments[0].click();\", countries_ar)\n",
     "countries_search = wait.until(EC.element_to_be_clickable((By.XPATH, \"//input[@id='filter-checkboxes-search' and @placeholder='Search countries']\")))\n",
     "countries_search.click()\n",
     "countries_search.send_keys(\"Brazil\")\n",
@@ -118,20 +88,334 @@
     "# Wait and see the result\n",
     "time.sleep(5)\n",
     "\n",
-    "# Get the page source after it's fully loaded\n",
-    "html = driver.page_source\n",
+    "def getPageLinks(list):\n",
+    "    # Get the page source after it's fully loaded\n",
+    "    html = driver.page_source\n",
     "\n",
-    "# Pass it to BeautifulSoup\n",
-    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "    # Pass it to BeautifulSoup\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "links = [a[\"href\"] for a in soup.find_all('a', {\"data-testid\": \"vintagePageLink\"})]\n",
+    "    links = [a[\"href\"] for a in soup.find_all('a', {\"data-testid\": \"vintagePageLink\"})]\n",
     "\n",
-    "full_links = [\"https://www.vivino.com\" + link for link in links]\n",
+    "    full_links = [\"https://www.vivino.com\" + link for link in links]\n",
     "\n",
-    "for link in full_links:\n",
-    "    print(link)\n",
-    "#driver.quit()"
+    "    list.extend(full_links)\n",
+    "\n",
+    "    try:\n",
+    "        next_page_btn = wait.until(EC.element_to_be_clickable((By.XPATH, \"//a[@data-trackingid='buttonDefault'][.//span[.='Next']]\")))\n",
+    "        driver.execute_script(\"arguments[0].click()\", next_page_btn)\n",
+    "        time.sleep(7)\n",
+    "    except:\n",
+    "        print(\"No hay más páginas disponibles!\")\n",
+    "\n",
+    "link_list = []\n",
+    "counter = 0\n",
+    "while counter < 1:\n",
+    "    getPageLinks(link_list)\n",
+    "    counter += 1\n",
+    "\n",
+    "link_df = pd.DataFrame(link_list, columns=[\"wine_link\"])\n",
+    "link_df.to_csv(\"wine_links.csv\", index=False)\n",
+    "\n",
+    "driver.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wine_link</th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://www.vivino.com/US/en/luigi-bosca-parai...</td>\n",
+       "      <td>Paraiso</td>\n",
+       "      <td>2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-est...</td>\n",
+       "      <td>Estiba Reservada</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-est...</td>\n",
+       "      <td>Estiba Reservada</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>https://www.vivino.com/US/en/monteviejo-la-vio...</td>\n",
+       "      <td>La Violeta</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>https://www.vivino.com/US/en/vina-cobos-cobos-...</td>\n",
+       "      <td>Cobos Volturno</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>https://www.vivino.com/US/en/monteviejo-la-vio...</td>\n",
+       "      <td>La Violeta</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>https://www.vivino.com/US/en/vina-cobos-cobos-...</td>\n",
+       "      <td>Cobos Viña Cobos Malbec</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
+       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>https://www.vivino.com/US/en/vina-cobos-cobos-...</td>\n",
+       "      <td>Cobos Volturno</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>https://www.vivino.com/US/en/vina-cobos-cobos-...</td>\n",
+       "      <td>Cobos Volturno</td>\n",
+       "      <td>2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-nic...</td>\n",
+       "      <td>Nicolás Catena Zapata</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-mal...</td>\n",
+       "      <td>Malbec Argentino</td>\n",
+       "      <td>2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-mal...</td>\n",
+       "      <td>Malbec Argentino</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>https://www.vivino.com/US/en/el-enemigo-gran-e...</td>\n",
+       "      <td>Gran Enemigo Single Vineyard Chacayes Cabernet...</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>https://www.vivino.com/US/en/susana-balbo-noso...</td>\n",
+       "      <td>Nosotros Single Vineyard Nómade</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
+       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-mal...</td>\n",
+       "      <td>Malbec Argentino</td>\n",
+       "      <td>2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
+       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
+       "      <td>Adrianna Vineyard Mundus Bacillus Terrae Malbec</td>\n",
+       "      <td>2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
+       "      <td>Adrianna Vineyard River Malbec</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>https://www.vivino.com/US/en/monteviejo-la-vio...</td>\n",
+       "      <td>La Violeta</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-adr...</td>\n",
+       "      <td>Adrianna Vineyard Fortuna Terrae Malbec</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>https://www.vivino.com/US/en/bodegas-bianchi-e...</td>\n",
+       "      <td>Enzo Bianchi Gran Corte</td>\n",
+       "      <td>2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>https://www.vivino.com/US/en/catena-zapata-nic...</td>\n",
+       "      <td>Nicolás Catena Zapata</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>https://www.vivino.com/US/en/vina-cobos-vincul...</td>\n",
+       "      <td>Vinculum Malbec</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            wine_link  \\\n",
+       "0   https://www.vivino.com/US/en/luigi-bosca-parai...   \n",
+       "1   https://www.vivino.com/US/en/catena-zapata-est...   \n",
+       "2   https://www.vivino.com/US/en/catena-zapata-est...   \n",
+       "3   https://www.vivino.com/US/en/monteviejo-la-vio...   \n",
+       "4   https://www.vivino.com/US/en/vina-cobos-cobos-...   \n",
+       "5   https://www.vivino.com/US/en/monteviejo-la-vio...   \n",
+       "6   https://www.vivino.com/US/en/vina-cobos-cobos-...   \n",
+       "7   https://www.vivino.com/US/en/catena-zapata-adr...   \n",
+       "8   https://www.vivino.com/US/en/vina-cobos-cobos-...   \n",
+       "9   https://www.vivino.com/US/en/vina-cobos-cobos-...   \n",
+       "10  https://www.vivino.com/US/en/catena-zapata-nic...   \n",
+       "11  https://www.vivino.com/US/en/catena-zapata-mal...   \n",
+       "12  https://www.vivino.com/US/en/catena-zapata-mal...   \n",
+       "13  https://www.vivino.com/US/en/el-enemigo-gran-e...   \n",
+       "14  https://www.vivino.com/US/en/susana-balbo-noso...   \n",
+       "15  https://www.vivino.com/US/en/catena-zapata-adr...   \n",
+       "16  https://www.vivino.com/US/en/catena-zapata-mal...   \n",
+       "17  https://www.vivino.com/US/en/catena-zapata-adr...   \n",
+       "18  https://www.vivino.com/US/en/catena-zapata-adr...   \n",
+       "19  https://www.vivino.com/US/en/catena-zapata-adr...   \n",
+       "20  https://www.vivino.com/US/en/monteviejo-la-vio...   \n",
+       "21  https://www.vivino.com/US/en/catena-zapata-adr...   \n",
+       "22  https://www.vivino.com/US/en/bodegas-bianchi-e...   \n",
+       "23  https://www.vivino.com/US/en/catena-zapata-nic...   \n",
+       "24  https://www.vivino.com/US/en/vina-cobos-vincul...   \n",
+       "\n",
+       "                                                 name  year  \n",
+       "0                                             Paraiso  2020  \n",
+       "1                                    Estiba Reservada  2015  \n",
+       "2                                    Estiba Reservada  2017  \n",
+       "3                                          La Violeta  2013  \n",
+       "4                                      Cobos Volturno  2018  \n",
+       "5                                          La Violeta  2014  \n",
+       "6                             Cobos Viña Cobos Malbec  2019  \n",
+       "7     Adrianna Vineyard Mundus Bacillus Terrae Malbec  2017  \n",
+       "8                                      Cobos Volturno  2019  \n",
+       "9                                      Cobos Volturno  2020  \n",
+       "10                              Nicolás Catena Zapata  2017  \n",
+       "11                                   Malbec Argentino  2020  \n",
+       "12                                   Malbec Argentino  2021  \n",
+       "13  Gran Enemigo Single Vineyard Chacayes Cabernet...  2016  \n",
+       "14                    Nosotros Single Vineyard Nómade  2018  \n",
+       "15    Adrianna Vineyard Mundus Bacillus Terrae Malbec  2013  \n",
+       "16                                   Malbec Argentino  2004  \n",
+       "17    Adrianna Vineyard Mundus Bacillus Terrae Malbec  2018  \n",
+       "18    Adrianna Vineyard Mundus Bacillus Terrae Malbec  2020  \n",
+       "19                     Adrianna Vineyard River Malbec  2021  \n",
+       "20                                         La Violeta  2015  \n",
+       "21            Adrianna Vineyard Fortuna Terrae Malbec  2021  \n",
+       "22                            Enzo Bianchi Gran Corte  2020  \n",
+       "23                              Nicolás Catena Zapata  2019  \n",
+       "24                                    Vinculum Malbec  2018  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv = pd.read_csv(\"wine_links.csv\")\n",
+    "wine_df = pd.DataFrame(csv, columns=[\"wine_link\"])\n",
+    "wine_df[\"name\"] = None\n",
+    "wine_df[\"year\"] = None\n",
+    "\n",
+    "options = webdriver.ChromeOptions()\n",
+    "options.headless = False  \n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
+    "\n",
+    "# Iterar en las columnas del DF\n",
+    "for index, row in wine_df.iterrows():\n",
+    "    link = row[\"wine_link\"]\n",
+    "    driver.get(link)\n",
+    "    time.sleep(5)  \n",
+    "\n",
+    "    html = driver.page_source\n",
+    "    soup = BeautifulSoup(html, \"html.parser\")\n",
+    "\n",
+    "    # DATA 1: NOMBRE (name)\n",
+    "    wine_name_tag = soup.find(\"a\", {\"data-cartitemsource\": \"wine-page-master-link\"})\n",
+    "    wine_name = wine_name_tag.get_text(strip=True) if wine_name_tag else None\n",
+    "\n",
+    "    # DATA 2: AÑO (year)\n",
+    "    wine_year = None\n",
+    "    if wine_name_tag:\n",
+    "        parent_div = wine_name_tag.find_parent(\"div\")\n",
+    "        if parent_div:\n",
+    "            year_text = parent_div.get_text(strip=True)\n",
+    "            wine_year = year_text.replace(wine_name, \"\").strip()\n",
+    "\n",
+    "    # ÚLTIMO PASO: GUARDAR EN DATAFRAME\n",
+    "    wine_df.at[index, \"name\"] = wine_name\n",
+    "    wine_df.at[index, \"year\"] = wine_year\n",
+    "\n",
+    "# Guardar el CSV actualizado\n",
+    "wine_df.to_csv(\"updated_test.csv\", index=False)\n",
+    "\n",
+    "driver.quit()\n",
+    "\n",
+    "wine_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
